[gd_scene load_steps=8 format=3 uid="uid://chtonxaegbo54"]

[ext_resource type="Script" uid="uid://cvuqk6nkfmmx0" path="res://MainMenu.gd" id="1_cmhrf"]
[ext_resource type="FontFile" uid="uid://jbbxmrffrxqq" path="res://Assets/Fonts/m5x7.ttf" id="2_d2nv2"]
[ext_resource type="Texture2D" uid="uid://oebr3eii846j" path="res://Assets/IMAGES/hangarshell.jpg" id="2_kcu8t"]
[ext_resource type="AudioStream" uid="uid://q6iylgd1j0a2" path="res://Audio/buttonpress.mp3" id="3_igs2m"]
[ext_resource type="AudioStream" uid="uid://vdd7r2c04aob" path="res://Audio/hover-button-287656.mp3" id="4_3pujl"]

[sub_resource type="Theme" id="Theme_4mgpv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2nv2"]
bg_color = Color(0.9372549, 0.35686275, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_offset = Vector2(0, 3.5)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmhrf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 647.0
texture = ExtResource("2_kcu8t")
expand_mode = 1

[node name="startbutton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.038000003
anchor_top = 0.634
anchor_right = 0.21300001
anchor_bottom = 0.75200003
offset_left = -8.776001
offset_top = 0.16799927
offset_right = 9.623978
offset_bottom = -0.2960205
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_4mgpv")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_d2nv2")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_d2nv2")
text = "Start"

[node name="settingsbutton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.76100004
anchor_right = 0.224
anchor_bottom = 0.878
offset_left = -6.015999
offset_top = -0.12802124
offset_right = -0.04800415
offset_bottom = 0.05596924
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_4mgpv")
theme_override_colors/font_color = Color(0.03137255, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_d2nv2")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_d2nv2")
text = "Settings"

[node name="quitbutton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036000002
anchor_top = 0.88600004
anchor_right = 0.216
anchor_bottom = 0.9850001
offset_left = -9.472004
offset_top = -0.12805176
offset_right = 9.167999
offset_bottom = -0.2800293
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.050980393, 0, 1)
theme_override_fonts/font = ExtResource("2_d2nv2")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_d2nv2")
text = "Quit
"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.093
anchor_top = 0.005
anchor_right = 0.955
anchor_bottom = 0.179
offset_left = -2.136
offset_top = 22.76
offset_right = -2.16003
offset_bottom = 24.008
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9529412, 0.019607844, 0, 1)
theme_override_fonts/font = ExtResource("2_d2nv2")
theme_override_font_sizes/font_size = 143
text = "Space Survivor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_igs2m")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3pujl")

[connection signal="mouse_entered" from="startbutton" to="." method="_on_startbutton_mouse_entered"]
[connection signal="pressed" from="startbutton" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="settingsbutton" to="." method="_on_startbutton_mouse_entered"]
[connection signal="pressed" from="settingsbutton" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="quitbutton" to="." method="_on_startbutton_mouse_entered"]
[connection signal="pressed" from="quitbutton" to="." method="_on_quitbutton_pressed"]
[connection signal="pressed" from="quitbutton" to="." method="_on_button_pressed"]
